# 42SH

./: LICENSE  README.md  meson.build
src/: ast.c  clean.sh  error.c  exec.c  exec_main.c  lexer.c  main.c  meson.build  parse.c  parse_and_or.c  parse_command.c  parse_compound_list.c  parse_else_clause.c  parse_list.c  parse_pipelines.c  parse_prefix.c  parse_print.c  parse_redirection.c  parse_rule_if.c  parse_shell_command.c  parse_simple_command.c  print.c  token.c  token_printer.c  usage.c  utils.c
src/builtin/: builtin.c  cd.c  echo.c  meson.build
src/include/: alloc.h  ast.h  builtin.h  cd.h  echo.h  error.h  exec.h  lexer.h  parse.h  parse_and_or.h  parse_command.h  parse_compound_list.h  parse_else_clause.h  parse_list.h  parse_pipelines.h  parse_prefix.h  parse_redirection.h  parse_rule_if.h  parse_shell_command.h  parse_simple_command.h  print.h  token.h  usage.h  utils.h
tests/: token_test_1
tests/exec/: exec_tests.sh  test_and_or.sh  test_compound_list.sh  test_nested_if.sh  test_pipe.sh
tests/exec/.cache/v/cache/: lastfailed
tests/parse/: test_42sh_parse.py
tests/parse/.cache/v/cache/: lastfailed
